--- a/src/app/viewer/viewer.component.scss
+++ b/src/app/viewer/viewer.component.scss
@@ -9,6 +9,7 @@
 .viewer-header{
     display: flex;
     flex-direction: row;
+    background-color: whitesmoke;
     justify-content: space-between;
     align-items: center;
 }
